<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="7">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></View>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:text="@string/title"
    android:layout_gravity="center"
    android:textSize="40dp"/>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:weightSum="2">
      <EditText
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1.2"
          android:id="@+id/edit_main"
          android:hint="@string/input_new_city"/>
      <Button
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.8"
          android:id="@+id/btn_main"
          android:text="@string/add_city"
          android:textAllCaps="false"
          />
  </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list_main"></ListView>



</LinearLayout>